--- a/style.css
+++ b/style.css
@@ -2,4 +2,33 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
+}
+
+h1 {
+ text-align: center   ;
+}
+
+header a {
+  background-color: gainsboro;
+  padding-left:1em;
+  padding-right: 1em;
+}
+
+img {
+display: block;  
+margin-left: auto;
+margin-right: auto;
+}
+
+figcaption {
+  text-align: center;
+  font-size: smaller;
+}
+
+#details > div {
+  background-color: red;
+  float: left;
+  text-align: center;
+  width: 25%;
 }
